Bug 1433529: Fixed TODOs in parse_sdp, r=dminor

Changed parse_sdp to use StringView instad of raw pointers
Fixed all TODOs by using the existing StringView::into trait instead of doing a manual string conversion.

MozReview-Commit-ID: 5m7rLAu8vwS

--HG--
extra : rebase_source : f34cf389829772b4ca84d7ba895a8b71bd620f64